<resources>

    <string name="app_name">Dudoji</string>
    <string name="action_settings">Settings</string>

    <string name="title_tv">두더지 잡기</string>
    <string name="info01">두더지 : +5점</string>
    <string name="info02">차장 : -10점</string>
    <string name="info03">부장 : 점수 초기화</string>
    <string name="start_btn">게임 시작</string>

    <string name="score">점수:</string>
    <string name="time">시간:</string>

    <string name="dialog_title">게임 오버</string>
    <string name="scoreis01">점수는&#160;</string>
    <string name="scoreis02">점 입니다.</string>
    <string name="dialog_close">닫기</string>

</resources>
