<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_tv"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="32dp" />

    <LinearLayout
        android:id="@+id/info_ly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_below="@id/title_tv" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/dudoji"
                android:layout_marginRight="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info01"
                android:textColor="#000000"
                android:textSize="22sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/chajang"
                android:layout_marginRight="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info02"
                android:textColor="#000000"
                android:textSize="22sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/bujang"
                android:layout_marginRight="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info03"
                android:textColor="#000000"
                android:textSize="22sp" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/start_btn"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/start_btn"
        android:textSize="22sp"
        android:layout_margin="32dp"
        android:layout_below="@id/info_ly" />

</RelativeLayout>